<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layouPassword"
                tools:text="@string/confirm_password" />

            <TextView
                android:id="@+id/tvConfirm"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginEnd="@dimen/dp_32"
                android:ellipsize="end"
...
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gl_end" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp_32"
...
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReset">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@+id/inputPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivSigninProfile"
...
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/inputPassword"
...
