<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.sazib.ksl.ui._registration.signup.RegisterActivity">

    <androidx.core.widget.NestedScrollView
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnSubmit"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_24"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/inputPassword"
...
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/inputPassword"
...
